--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -16,4 +16,5 @@ repositories {
 
 dependencies {
 //    implementation 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
+//    implementation 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.21'
 }
